--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_checkout.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_checkout.scss
@@ -29,7 +29,7 @@
 
 .wc_payment_methods.payment_methods {
   margin: 80px 0;
-  label {
+  label:not([for="payment_method_stripe"]) {
     padding-left: 10px;
     img {
       padding-left: 30px;
@@ -37,5 +37,20 @@
   }
   .about_paypal {
     padding-left: 30px;
+  }
+}
+
+label[for="payment_method_stripe"] {
+  padding-left: 10px;
+  img {
+    padding-left: 10px;
+    width: 50px !important;
+  }
+}
+
+#order_review_heading {
+  span {
+    @extend .gibson-semibold;
+    text-transform: uppercase;
   }
 }
