--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product-single.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product-single.scss
@@ -18,6 +18,7 @@ body.boxed {
 }
 .navigation-shop {
     //margin-bottom: 50px;
+    background: #ccc !important;
     &.wide {
         padding-left: 20px;
         padding-right: 20px;
@@ -106,6 +107,13 @@ body.boxed {
 
 //Product Images
 .images {
+  padding: 0 40px;
+  @include media-breakpoint-up(sm) {
+    padding: 0 0 0 3%;
+  }
+  @include media-breakpoint-up(md) {
+    padding: 0 0 0 5%;
+  }
     .out-of-stock-overlay {
         display: none;
     }
@@ -224,6 +232,10 @@ body.boxed {
 
 //Product Summary
 .product-summary {
+  padding: 0 40px;
+    @include media-breakpoint-up(md) {
+      padding: 0 40px 0 0;
+    }
     .product-category-name {
         padding-top: 0;
         padding-bottom: 10px;
@@ -422,20 +434,24 @@ body.boxed {
 //Product Tabs
 .woocommerce-tabs {
     .wc-tabs {
-        border-bottom: 1px solid #DDD;
+        //border-bottom: 1px solid #DDD;
         text-align: center;
         margin: 0 -40px;
         > li {
-            padding: 10px 0;
             text-transform: uppercase;
             font-size: 14px;
-            border-bottom: 1px solid #4c4c4c;
             a {
+                display: block;
                 position: relative;
                 margin: 0 23px;
                 @extend .gibson-semibold;
+                border-bottom: 2px solid transparent;
+                color: #aaa !important;
             }
             &.active {
+              a {
+                border-bottom: 2px solid #4c4c4c;
+              }
                 // a:before {
                 //     content: "";
                 //     position: absolute;
