--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product.scss
@@ -16,6 +16,9 @@
             @extend %transition;
         }
     }
+    .labels {
+      display: none;
+    }
     img {
         display: block;
         width: 100%;
