--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_mini-cart.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_mini-cart.scss
@@ -1,6 +1,6 @@
 .mini-cart {
     .cart-details {
-        border: 1px solid #000;
+        //border: 1px solid #000;
         border-radius: 0;
         box-shadow: none;
         padding: 20px;
